--- a/Assets/CSS/custom.css
+++ b/Assets/CSS/custom.css
@@ -235,9 +235,7 @@ header{
 
 .web-topics{
     display: grid;
-    grid-template-columns: repeat(5, minmax(calc(20% - 24px), 17.71%));/*minmax(17.71%, 20%)*/
-    grid-auto-rows: auto;
-    grid-auto-flow: row;
+    grid-template-columns: repeat(auto-fill, minmax(calc(20% - 24px) , 1fr));
     gap:35px 30px; /*2.29%*/
 }
 
