--- a/Assets/CSS/custom.css
+++ b/Assets/CSS/custom.css
@@ -21,14 +21,14 @@
     --heart-color:#DC143C;
 }
 
-.dark-theme{
-    --brand-primary:#0768AC;
-    --brand-secondary: #03C180;
-    --bg_default:#1A1A1A;
-    --bg_body:#282828;
-    --lines-color:#000000;
-    --body-text:#EDEDED;
-    --heart-color:#DC143C;
+.dark-mode{
+    --brand-primary:#0768AC !important;
+    --brand-secondary: #03C180 !important;
+    --bg_default:#1A1A1A !important;
+    --bg_body:#282828 !important;
+    --lines-color:#000000 !important;
+    --body-text:#EDEDED !important;
+    --heart-color:#DC143C !important;
 }
 
 .container{
@@ -38,7 +38,7 @@
 body{
     font-family: Nunito-Sans;
     background-color: var(--bg_body);
-    transition: all ease-in 0.5s;
+    line-height: normal; 
 }
 
 h3, h4, h5, h6, p{
@@ -46,10 +46,6 @@ h3, h4, h5, h6, p{
 }
 
 /* custom styles for Javascript to use////////////////////////////////////////////////////////////// */
-
-.d-none{
-    display: none;
-}
 
 .heart-icon-red-color{
     color: var(--heart-color);
@@ -65,6 +61,7 @@ h3, h4, h5, h6, p{
 header{
     background-color: var(--bg_default);
     height: 70px;
+    transition: background-color ease-in 0.5s;
     position: relative;
 }
 
@@ -79,7 +76,6 @@ header{
 }
 
 .page-modes{
-    width: 100%;
     height: 70px;
     display: flex;
     justify-content: space-between;
@@ -107,20 +103,16 @@ header{
     transform:translateY(2px) ;
 }
 
-#dark-mode-label:hover{
-    background-color: black;
-    color: var(--bg_default);
-    border: 1px solid black;
-}
-
-
-.page-modes-buttons input[type="checkbox"] {
-    display: none;
+#dark-mode-button:hover{
+    background-color: black !important;
+    color: var(--bg_default) !important;
+    border: 1px solid black !important;
 }
 
 /* BANNER SECTION/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
 .banner-section{
+    transition: background-color ease-in 0.5s;
     background-color: var(--bg_default);
 }
 
@@ -129,8 +121,8 @@ header{
 }
 
 .banner-primary{
-    width: 100%;
     height: 67.5px;
+    width: 100%;
     position: absolute;
     top: 0;
     left: 0;
@@ -171,7 +163,7 @@ header{
 /* SEARCH BAR/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
 .search-section{
-    overflow: hidden;
+    /* overflow: hidden; */
     opacity: 1;
     transition: all ease-in .5s;
 }
@@ -182,19 +174,19 @@ header{
 }
 
 .search-bar{
-    width: 100%;
     height: 100%;
     display: flex;
     border-radius: 10px;
     background-color: var(--bg_default);
-    box-shadow: 0px 0px 9px -4px rgba(0,0,0,0.23);
+    box-shadow: 0px 0px 9px -2px rgba(0,0,0,0.23);
+    transition: background-color ease-in 0.5s;
     position: relative;
 }
 
 .search-field{
-    width: 94%;
-    background-color: transparent;
+    width: 96%;
     padding: 12.9px 0 12.9px 40px; 
+    background-color: transparent;
     border: 0;
 }
 
@@ -229,13 +221,15 @@ header{
     border-left: 1px solid var(--lines-color);
     cursor: pointer;
     padding: 0 10px;
+    transition: border-color ease-in 0.5s;
 }
 
 .search-options label{
     width: 100%;
     font-size: 0.7em;
     padding: 0 0 0 5px;
-    transform: translateY(6px);
+    transform: translateY(2px);
+    transition: background-color ease-in 0.5s;
 }
 
 .search-options select{
@@ -244,6 +238,7 @@ header{
     border: 1px;
     border-radius: 10px;
     transform: translateY(-5px);
+    transition: background-color ease-in 0.5s;
 }
 
 /* WEB TOPICS COURSES///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
@@ -254,35 +249,46 @@ main{
 }
 
 .web-topics-page{
+    flex-shrink: 0;
     width: 100%;
     opacity: 1;
-    transition: all ease-in .5s;
+    transition-property: margin, opacity;
+    transition-duration: .5s;
+    transition-timing-function: ease-in;
+}
+
+.main-custom-container{
+    padding-top: 12.5px;
 }
 
 .main-custom-container h3{
     font-weight: 700;
     font-size: 1.5rem;
     color: var(--body-text);
-    margin: 12.5px 0 30px 0;
+    margin: 0 0 30px 0;
 }
 
 .web-topics-box-parent{
-    margin-top: 10px;
     padding-bottom: 4px;
 }
 
 .web-topics{
     display: grid;
-    grid-template-columns: minmax(17.71%, 20%) minmax(17.71%, 20%) minmax(17.71%, 20%) minmax(17.71%, 20%) minmax(17.71%, 20%);
-    column-gap: 2.29%;
-    row-gap:35px ;
+    grid-template-columns: repeat(auto-fill, minmax(calc(20% - 24px) , 1fr));
+    gap:35px 30px; /*2.29%*/
 }
 
 .web-topic-card{
+    /* width:calc(20% - 24px);
+    flex-shrink: 1;
+    padding-left: 0;
+    padding-right: 0; */
+    transition: background-color ease-in 0.5s;
     background-color: var(--bg_default);
     border-radius: 10px;
     box-shadow: 0px 0px 5px -3px rgba(0,0,0,0.23);
     cursor: pointer;
+    text-decoration: none;
 }
 
 /* web topic card image control//////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
@@ -298,6 +304,7 @@ main{
     height: 134.047px;
     object-fit: cover;
     background-color: var(--bg_default);
+    vertical-align: middle;
 }
 
 
@@ -314,10 +321,12 @@ main{
     white-space: nowrap;
     font-size: .8rem;
     font-weight: 400;
+    /* line-height: normal;
+    margin-bottom: 0; */
 }
 
 .card-details h5{
-    height: 31.688px; /*DON'T TAMPER WITH THIS ---> IT HELPS ALL ALIGN RATING STARS ACCROSS ALL CARDS*/
+    height: 31.688px; /*DON'T TAMPER WITH THIS ---> IT HELPS ALIGN ALL RATING STARS ACCROSS ALL CARDS*/
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
@@ -326,6 +335,7 @@ main{
     font-size: .9rem;
     line-height: 1.1;
     margin-bottom: 10px;
+    font-weight: bold;
 }
 
 
@@ -370,141 +380,11 @@ main{
 
 /*Custom Star rating////////////////////////////////////////////////////////////////////////////////////////*/
 
-.web-topic-card:nth-child(2) .star-border:nth-child(4) .star-color-fill{ /* CSS star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 9px;
-    background-color: var(--bg_default);
-}
-
-.web-topic-card:nth-child(5) .star-border:nth-child(4) .star-color-fill{ /* Angular star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 10px;
-    background-color: var(--bg_default);
-}
-
-
-.web-topic-card:nth-child(7) .star-border:nth-child(4) .star-color-fill{ /* Vue star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 9px;
-    background-color: var(--bg_default);
-}
-
-
-.web-topic-card:nth-child(13) .star-color-fill{ /* SQL star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 6px;
-    background-color: var(--bg_default);
-}
-
-.web-topic-card:nth-child(14) .star-color-fill{ /* NoSQL star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 6px;
-    background-color: var(--bg_default);
-}
-
-.web-topic-card:nth-child(15) .star-color-fill{ /* REST APIs star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 3px;
-    background-color: var(--bg_default);
-}
-
-.web-topic-card:nth-child(17) .star-border:nth-child(4) .star-color-fill{ /* OAuth star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 8px;
-    background-color: var(--bg_default);
-}
-
-.web-topic-card:nth-child(18) .star-border:nth-child(4) .star-color-fill{ /* JSON star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 8px;
-    background-color: var(--bg_default);
-}
-
-.web-topic-card:nth-child(26) .star-border:nth-child(4) .star-color-fill{ /* Performance Optimization star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 3px;
-    background-color: var(--bg_default);
-}
-
-.web-topic-card:nth-child(27) .star-color-fill{ /* Cross-Browser Compatibility star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 5px;
-    background-color: var(--bg_default);
-}
-
-.web-topic-card:nth-child(30) .star-color-fill{ /* Testing and Debugging star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 6px;
-    background-color: var(--bg_default);
-}
-
-.web-topic-card:nth-child(32) .star-color-fill { /* DevOps star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 3px;
-    background-color: var(--bg_default);
-}
-
-.web-topic-card:nth-child(33) .star-color-fill, 
-.star-color-fill-favourites{ /* Cloud Computing star rating */
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 5px;
-    background-color: var(--bg_default);
-}
-
-.web-topic-card:nth-child(37) .star-border:nth-child(4) .star-color-fill{ /* Web Accessibility Initiative (WAI) star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 9px;
-    background-color: var(--bg_default);
-}
-
 /* End of custom Star rating////////////////////////////////////////////////////////////////////////////////////////*/
 
 .card-details p{
     font-size: .8rem;
     color: gray;
-    /* margin-bottom: 15px; */
 }
 
 /* FAVOURITES ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
@@ -517,14 +397,11 @@ main{
     left: 0;
     box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.23);
     transform: translateY(175px);
+    transition: background-color ease-in 0.5s;
 }
 
-.favourite-visibile{
-    transform: translateY(0px);
-}
-
-.hide-favourites{
-    transform: translateY(175px);
+.favourites-section-container{
+    padding-top: 12px;
 }
 
 .favourites-animation-forward{
@@ -554,18 +431,30 @@ main{
 }
 
 .favourites-items{
-    width: 100%;
-    height: 175px;
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 10px;
+    height: 160px;
 }
+
+.favourites-items h3{
+    /* padding: 0 0 12px 0; */
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+.favourites-items-container{
+    display: flex;
+    overflow: auto;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
 .favourites-item{
     width: 121px;
     box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.23);
     height: fit-content;
     border-radius: 5px;
     overflow: hidden;
+    margin-right: 10px;
+    flex-shrink: 0;
 }
 
 .favourite-card-thumbnail{
@@ -576,27 +465,26 @@ main{
     width: 100%;
     height: 60.500px;
     object-fit: cover;
+    vertical-align: middle;
 }
 
-.favourites-items h3{
-    width: 100%;
-    padding: 12px 0 0 0;
-    font-size: 1rem;
+.favourite-card-details-container{
+    padding: 8px;
 }
 
 .favourites-item h5{
     overflow: hidden;
     text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
+    white-space: nowrap;
     font-size: .9rem;
     line-height: 1.1;
-    padding-left: 7px;
+    padding-right: 3px;
+    font-weight: bold;
 }
 
 .favourites-item .star-rating-box{
-    padding-left: 5px;
+    padding-top: 4px;
+    margin-bottom: 0;
 }
 
 /* FOOTER///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
@@ -611,6 +499,7 @@ main{
     text-align: center;
     font-size: 1rem;
     font-weight: 400;
+    transition: background-color ease-in 0.5s;
 }
 
 .footer-heart{
