--- a/Assets/CSS/details-page-inside-main.css
+++ b/Assets/CSS/details-page-inside-main.css
@@ -1,8 +1,12 @@
+/* Global//////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+/* End of Global////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
 .details-page{
+    flex-shrink: 0;
     width: 100%;
-    transition: all ease-in .5s;
-    margin-right: -100%;
-    opacity: 0;
+    transition: opacity ease-in .5s;
+    opacity: 1;
     height: fit-content;
 }
 
@@ -10,24 +14,28 @@
     background-color: var(--body-text);
 }
 
-.course-details-box-container{
+
+.details-page-container{
+    padding-inline-start:19.29% ; /*17.29%*/
     display: flex;
-    padding: 0 0 0 17.29%;
 }
 
 .course-details{
-    width: 50%;
-    padding: 30px;
+    width: calc(50% - 30px);
+    padding: 30px 10px 30px 0px;
+    margin-right: 30px;
 }
 
 .course-details h4{
     color: var(--brand-secondary);
     font-weight: 400;
+    font-size: inherit;
 }
 
 .course-details h5{
     color: var(--bg_default);
     font-size: 1.5rem;
+    font-weight: bold;
 }
 
 .course-details .star-color-fill{
@@ -51,8 +59,8 @@
 
 .details-page-card-contianer{
     margin-top: 30px;
-    position: relative;
     width: 320px;
+    position: relative;
 }
 
 .details-page-card-contianer-smallscreen{
@@ -62,15 +70,14 @@
 .details-page-card{
     background-color:var(--bg_default);
     width: 320px;
+    padding: 2px;
+    box-shadow: 0px 0px 14px -8px rgb(0, 0, 0);
     position: absolute;
     top: 0;
     left: 0;
-    padding: 2px;
-    box-shadow: 0px 0px 1px 0px rgb(0, 0, 0);
 }
 
 .details-page-card-thumbnail{
-    width: 100%;
     height: 200px;
 }
 
@@ -78,14 +85,21 @@
     width: 100%;
     height: 100%;
     object-fit:cover;
+    vertical-align: middle;
 }
 
 .details-page-card-custom-container{
-    padding-bottom: 4.5%;
+    padding:14px 14px;
 }
 
 .details-page-card-custom-container h4{
-    padding: 20px 0 11px 0 ;
+    padding: 0 0 11px 0 ;
+    font-size: inherit;
+}
+
+.details-page-card-custom-container h4 span{
+    font-weight: bold;
+    font-size: inherit;
 }
 
 .details-page-card-custom-container h4 a{
@@ -97,16 +111,21 @@
     border: 1px solid var( --lines-color);
 }
 
+.add-to-favourites-box p{
+    margin-bottom: 0;
+    padding-bottom: 10px;
+}
+
 .add-to-favourites-box button{
-    margin: 10px 0;
     width: 100%;
+    border: 0;
+    text-align: center;
+    margin:0 0 10px 0;
     padding:3px 0 17px 0;
     background-color: var(--brand-secondary);
     color:var(--bg_body);
-    border: 0;
     font-size: 1.25rem;
-    text-align: center;
-    box-shadow: 0px 0px 1px 0px rgb(0, 0, 0);
+    box-shadow: 0px 0px 8px -5px rgb(0, 0, 0);
 }
 
 .details-page-heart{
@@ -125,14 +144,15 @@
 /* course sub topics///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
 .details-page-sub-topics-container{
-    padding:0 43.5% 0 19.29%;
+   padding-top: 30px;
 }
 
+
 .course-sub-topics{
+    width: calc(50% - 30px);
     border: 1px solid var(--lines-color);
     border-radius: 5px;
     background-color: var(--bg_default);
-    margin-top: 30px;
 }
 
 .course-sub-topic{
@@ -148,7 +168,8 @@
 
 .course-sub-topic h2{
     color: var(--body-text);
-
+    font-size: 1.5em;
+    font-weight: bold;
 }
 
 .course-sub-topic h3 {
@@ -163,4 +184,3 @@
     color: var(--brand-secondary);
     width: 5%;
 }
-
