--- a/Assets/CSS/custom.css
+++ b/Assets/CSS/custom.css
@@ -19,11 +19,16 @@
     --lines-color:	#DDDDDD;
     --body-text:#333333;
     --heart-color:#DC143C;
+    --border-colors: #DDDDDD;
+    --details-course-box-color:#333333;
+    --details-page-card-background:#EDEDED;
+    --background-color-for-images:white;
+    --details-page-course-box-text-color:white;
+    --details-page-card-text-color:black;
+    --details-page-card-add-to-favourites:white;
 }
 
 .dark-mode{
-    --brand-primary:#0768AC !important;
-    --brand-secondary: #03C180 !important;
     --bg_default:#1A1A1A !important;
     --bg_body:#282828 !important;
     --lines-color:#000000 !important;
@@ -39,10 +44,12 @@ body{
     font-family: Nunito-Sans;
     background-color: var(--bg_body);
     line-height: normal; 
+    transition: background-color, ease-in .5s;
 }
 
 h3, h4, h5, h6, p{
     color: var(--body-text);
+    transition: color, ease-in, .5s;
 }
 
 /* custom styles for Javascript to use////////////////////////////////////////////////////////////// */
@@ -101,10 +108,11 @@ header{
     font-family: Nunito-Sans;
     font-size: 0.9rem;
     background-color: transparent;
-    border: 1px solid var(--lines-color);
+    border: 1px solid var(--border-colors);
     padding: 5px 10px;
     border-radius: 5px;
     cursor: pointer;
+    color: var(--body-text);
 }
 
 .mode-icon{
@@ -112,9 +120,9 @@ header{
 }
 
 #dark-mode-button:hover{
-    background-color: black !important;
-    color: var(--bg_default) !important;
-    border: 1px solid black !important;
+    background-color: var(--body-text);
+    color: var(--bg_default) ;
+    border: 1px solid var( --lines-color);
 }
 
 /* BANNER SECTION/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
@@ -166,6 +174,7 @@ header{
 .banner-message p{
     font-size: 1.01em;
     font-weight: 300;
+    
 }
 
 /* SEARCH BAR/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
@@ -220,6 +229,9 @@ header{
 
 .search-icon{
     font-size: 1rem;
+    color: var(--body-text);
+    transition: color ease-in 0.5s;
+
 }
 
 .search-options{
@@ -237,7 +249,11 @@ header{
     font-size: 0.7em;
     padding: 0 0 0 5px;
     transform: translateY(2px);
-    transition: background-color ease-in 0.5s;
+    color: var(--body-text);
+    transition-property: background-color, color;
+    transition-duration: .5s;
+    transition-timing-function: ease-in;
+    cursor: pointer;
 }
 
 .search-options select{
@@ -246,7 +262,12 @@ header{
     border: 1px;
     border-radius: 10px;
     transform: translateY(-5px);
-    transition: background-color ease-in 0.5s;
+    background-color: var(--bg_default);
+    color: var(--body-text);
+    transition-property: background-color, color;
+    transition-duration: .5s;
+    transition-timing-function: ease-in;
+    cursor: pointer;
 }
 
 /* WEB TOPICS COURSES///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
@@ -311,7 +332,7 @@ main{
     width: 100%;
     height: 134.047px;
     object-fit: cover;
-    background-color: var(--bg_default);
+    background-color: var(--background-color-for-images);
     vertical-align: middle;
 }
 
@@ -381,6 +402,7 @@ main{
     top: 0px;
     left: 0px;
     background-color: var(--bg_default);
+    transition: background-color, ease-in, .5s;
 }
 
 /* end of default 4-star rating  ///////////////////////////////////////////////////////////////////////////*/
