--- a/Assets/CSS/details-page-inside-main.css
+++ b/Assets/CSS/details-page-inside-main.css
@@ -11,7 +11,7 @@
 }
 
 .course-details-box{
-    background-color: var(--body-text);
+    background-color: var(--details-course-box-color);
 }
 
 
@@ -33,13 +33,13 @@
 }
 
 .course-details h5{
-    color: var(--bg_default);
+    color: var(--details-page-course-box-text-color);
     font-size: 1.5rem;
     font-weight: bold;
 }
 
 .course-details .star-color-fill{
-    background-color: var(--body-text);
+    background-color: var(--details-course-box-color);
 }
 
 .course-details .star-rating-box{
@@ -47,7 +47,7 @@
 }
 
 .course-details p{
-    color: var(--bg_default);
+    color: var(--details-page-course-box-text-color);
     font-size: 1.01rem;
 }
 
@@ -68,7 +68,7 @@
 }
 
 .details-page-card{
-    background-color:var(--bg_default);
+    background-color:var(--details-page-card-background);
     width: 320px;
     padding: 2px;
     box-shadow: 0px 0px 14px -8px rgb(0, 0, 0);
@@ -95,11 +95,13 @@
 .details-page-card-custom-container h4{
     padding: 0 0 11px 0 ;
     font-size: inherit;
+    color: var( --details-page-card-text-color);
 }
 
 .details-page-card-custom-container h4 span{
     font-weight: bold;
     font-size: inherit;
+    color: var(--details-page-card-text-color);
 }
 
 .details-page-card-custom-container h4 a{
@@ -108,7 +110,7 @@
 
 .add-to-favourites-box{
     padding: 20px 20px 10px 20px;
-    border: 1px solid var( --lines-color);
+    border: 1px solid var( --border-colors);
 }
 
 .add-to-favourites-box p{
@@ -123,7 +125,7 @@
     margin:0 0 10px 0;
     padding:3px 0 17px 0;
     background-color: var(--brand-secondary);
-    color:var(--bg_body);
+    color:var(--details-page-card-add-to-favourites);
     font-size: 1.25rem;
     box-shadow: 0px 0px 8px -5px rgb(0, 0, 0);
 }
@@ -153,6 +155,9 @@
     border: 1px solid var(--lines-color);
     border-radius: 5px;
     background-color: var(--bg_default);
+    transition-property:border-color, background-color;
+    transition-duration: .5s;
+    transition-timing-function: ease-in;
 }
 
 .course-sub-topic{
@@ -160,6 +165,7 @@
     border-bottom: 1px solid var(--lines-color);
     padding: 15px 5px 15px 30px;
     column-gap: 3%;
+    transition:border-color, ease-in, .5s; 
 }
 
 .course-sub-topic:last-child{
