--- a/Assets/CSS/responsive.css
+++ b/Assets/CSS/responsive.css
@@ -111,7 +111,7 @@
     }
 
     .web-topics{
-        /* grid-template-columns: minmax(100%, 20%); */
+        grid-template-columns: minmax(100%, 20%);
         gap: 30px 0;
     }
 
