--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -6,7 +6,7 @@
 
 @font-face {
   font-family: Nunito-Sans;
-  src: url(../../../../public/vendor/fonts/NunitoSans-VariableFont_YTLC\,opsz\,wdth\,wght.ttf);
+  src: url(../../../public/vendor/fonts/NunitoSans-VariableFont_YTLC\,opsz\,wdth\,wght.ttf);
 }
 
 :root{
